add footer.ejs and modify other views files

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,5 @@
 <% include partials/header %>
-    <h1>Title</h1>
-    <p>Mah boi.</p>
-    <p>Current date and time is <%= new Date();%></p>
-  </body>
-</html>
+<h1>Title</h1>
+<p>Mah boi.</p>
+<p>Current date and time is <%= new Date();%></p>
+<% include partials/footer %>
