Add views for some routes
with some links and a form

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,4 +2,5 @@
 <h1>Title</h1>
 <p>Mah boi.</p>
 <p>Current date and time is <%= new Date();%></p>
+<p>See <a href="/buttons">buttons</a>.</p>
 <% include partials/footer %>
