--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
   </head>
   <body>
 <!-- end of header -->
